# hgdb-rtl

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  setup.py
.github/workflows/: ci.yml
scripts/: hgdb-rtl
src/: CMakeLists.txt  rtl.cc  rtl.hh
tests/: test_sv.py
tests/vectors/: hierarchy.sv  nested_case.sv  nested_if.sv
tools/: CMakeLists.txt  hgdb-rtl.cc
